cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/loc_urgent.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/loc_urgent.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  -------------------------
  (1/1) Location is urgent.
  -------------------------
   * In automaton "p":
     - location:
       ^
